# chats

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  test.yml
Desktop/: Cargo.toml  Info.plist  Makefile  app.manifest  build.rs  create-macos-bundle.sh  resources.rc
Desktop/service/downloader/: main.rs
Desktop/src/: auth.rs  context_menu.rs  gpu.rs  main-mac.rs  main.rs  main_mac.rs  main_win.rs  menubar.rs
Desktop/src/core/: mod.rs
Desktop/src/hooks/: mod.rs  noti.rs  redis.rs
Desktop/src/ipc/: api.rs  dialog.rs  mod.rs
Desktop/src/network/: auth_proxy.rs  mod.rs  reverseproxy.rs
Desktop/src/platform/: mod.rs
Desktop/src/platform/mac/: download.rs  mod.rs  tray.rs  utils.rs
Desktop/src/platform/win/: download.rs  hooks.rs  mod.rs  tray.rs  utils.rs
Desktop/src/shaders/: shader.wgsl
Desktop/test/: ipc_test.rs  minimal.rs  testapi.rs  testcli.rs  testproxy.rs
Docs/: COMPLETE_IMPLEMENTATION_SUMMARY.md  DOWNLOAD_PROGRESS.md  DOWNLOAD_PROGRESS_FIX.md  DOWNLOAD_PROGRESS_RESOLUTION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_PART2.md  LAUNCHER_IMPLEMENTATION.md  MESSAGE_EDIT_BADGE_FIX.md  POSTBUILD_UPDATES.md  SIDEBAR_UNIQUE_ID_UPDATE.md  UNIQUE_ID_FORMAT.md  WEBSOCKET_NOTIFICATIONS.md
Launcher/: launcher.spec  main.py  updater.py  updater.spec
Launcher/native/: .gitignore  Makefile  launcher.c
MacDesktop/: Makefile  Package.swift  README.md  build.sh
MacDesktop/scripts/: convert-icon.py  convert-icon.sh  create-assets.sh
MacDesktop/src/: main.swift
Server/: auth.go  chat.go  chat_members.go  chunkedupload.go  customer.go  database.go  design.go  filestorage.go  fileupload.go  go.mod  go.sum  handlers_auth.go  handlers_chat.go  handlers_chat_members.go  handlers_customer.go  handlers_design.go  handlers_files.go  handlers_message.go  handlers_proof.go  handlers_queue.go  handlers_user.go  main.go  proof.go  queue.go  user.go  websocket.go
Server/migrations/: add_chat_uuid_to_filestorage.sql  add_download_token_to_filestorage.sql  add_is_edited_to_chats_history.sql  add_is_proof_enabled_to_chats.sql  add_unique_id_to_chats.sql  create_chat_members_table.sql  create_file_downloads_table.sql  create_filestorage_table.sql
Source/: Main.tsx  Root.tsx
Source/Components/: AuthTest.tsx  Avatar.tsx  ChatExample.tsx  ChatHeader.tsx  ChatInput.tsx  Chatlists.tsx  DebugPanel.tsx  DownloadProgress.tsx  EditChatDialog.tsx  EmojiPicker.tsx  FileAttachmentCard.tsx  FileManager.tsx  Icon.tsx  ImageAttachment.tsx  InviteDialog.tsx  JoinChatDialog.tsx  MessageBubble.tsx  MessageContent.tsx  NewChatDialog.tsx  NewDesignDialog.tsx  NewProofDialog.tsx  ProtectedRoute.tsx  SearchMessagesDialog.tsx  Sidebar.tsx  StickyStatus.tsx  UploadDialog.tsx  WebSocketProvider.tsx
Source/Components/MetaCards/: DesignMetaCard.tsx  FileCheckCard.tsx  Hyperlink.tsx  ProofMetaCard.tsx  QueueAcceptedCard.tsx  QueuePreviewCard.tsx  QueueStatusUpdateCard.tsx  ReqTypeChangeCard.tsx  index.tsx
Source/Components/ui/: ConfirmDialog.tsx  DropdownMenu.tsx  Toast.tsx  badge.tsx  card.tsx
Source/Data/: mockup.json
Source/Pages/: AllChats.tsx  Login.tsx  Users.tsx
Source/Styles/: index.css
Test/: testparsedownloader.py
