[package]
name = "mikochat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mikochat"
path = "src/main.rs"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "mikoproxy"
path = "test/testproxy.rs"

[dependencies]
wry = "0.53"
winit = "0.30"
http = "1.0"
wgpu = "28.0"
pollster = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-window-handle = "0.6"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ico = "0.3"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
] }
