[package]
name = "mikochat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mikochat"
path = "src/main.rs"

[[bin]]
name = "minimal"
path = "test/minimal.rs"

[[bin]]
name = "testcli"
path = "test/testcli.rs"

[[bin]]
name = "testapi"
path = "test/testapi.rs"

[[bin]]
name = "ipc_test"
path = "test/ipc_test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[dependencies]
wry = "0.53"
winit = "0.30"
http = "1.0"
wgpu = "28.0"
pollster = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-window-handle = "0.6"
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ico = "0.3"
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
ratatui = "0.28"
crossterm = "0.28"
lazy_static = "1.4"
bincode = "1.3"
base64 = "0.21"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
] }
