[package]
name = "printingworkspace"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "workspace"
path = "src/main.rs"

[[bin]]
name = "downloaderservice"
path = "service/downloader/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[features]
default = []

[dependencies]
wry = "0.53"
winit = "0.30"
http = "1.0"
wgpu = "28.0"
pollster = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "time", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
raw-window-handle = "0.6"
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ico = "0.3"
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
ratatui = "0.28"
crossterm = "0.28"
lazy_static = "1.4"
bincode = "1.3"
base64 = "0.21"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
dirs = "5.0"
url = "2.5"

# Cross-platform tray icon support
tray-icon = "0.19"

# Build dependencies
[build-dependencies]

# Windows-specific build dependencies
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Windows-specific runtime dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
winreg = "0.52"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
